--- a/p1pTESTING.html
+++ b/p1pTESTING.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Henry">
     <meta name="description" content="Showing my learning Progress (HTML/CSS)">
     <title>Anri Couturi Official Online Store | ANRI COUTURI</title>
-    <link rel="icon" href="C:\Users\micro\Desktop\HTML Progress/AC/ac-new-white-5.png" type="image/x-icon">
+    <link rel="icon" href="ac-new-white-5.png" type="image/x-icon">
     <link rel="stylesheet" href="p1pSHEET.css">
     <link rel="stylesheet" href="snowflakes.css">
 
@@ -1033,3 +1033,4 @@ document.querySelectorAll('.menu-item').forEach(menuItem => {
 
 
 </html>
+
